ATMO-31120 mods to hr tag to fix spacing above and below.

--- a/style/document.css
+++ b/style/document.css
@@ -76,6 +76,8 @@ hr { /*Added with JH 4/26/19. To replace div tags coded with divider1, use hr in
 	border-bottom: 1px solid gray;
 	padding-bottom: 0px;
 	padding-top: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 
 /*---------- Definition list styles (glossary, field descriptions) ----------*/
